# rag-engine

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: eval_sample.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  DocumentsPanel.tsx  QueryPanel.tsx  UploadPanel.tsx  api.ts  index.css
rag_engine/: __init__.py  cli.py  config.py  database.py  logging.py  models.py
rag_engine/api/: __init__.py  app.py  routes.py  schemas.py
rag_engine/evaluation/: __init__.py  cli.py  metrics.py
rag_engine/ingestion/: __init__.py  chunker.py  extractors.py  pipeline.py
rag_engine/query/: __init__.py  pipeline.py
rag_engine/storage/: __init__.py  embeddings.py  vector_store.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_api.py  test_chunker.py  test_config.py  test_evaluation.py  test_extractors.py  test_ingestion_pipeline.py  test_logging.py  test_models.py  test_query_pipeline.py  test_vector_store.py
