[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-engine"
version = "1.0.0"
description = "Production-grade Retrieval-Augmented Generation pipeline with pgvector, hybrid search, and source citations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "George Castillo", email = "george@gcasti.dev" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "openai>=1.58.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.18",
    "PyMuPDF>=1.25.0",
    "tiktoken>=0.8.0",
    "numpy>=1.26.0",
    "rank-bm25>=0.2.2",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
rag-engine = "rag_engine.cli:main"
rag-eval = "rag_engine.evaluation.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
